added server specific play

--- a/ansible/run_debian_template.yml
+++ b/ansible/run_debian_template.yml
@@ -6,3 +6,6 @@
     prompt: "Enter become pass"
   roles:
     - role: debian-template
+    - role: server_setup
+      when: ansible_connection == "ssh"
+      become: true
