--- a/ansible/roles/docker/tasks/main.yml
+++ b/ansible/roles/docker/tasks/main.yml
@@ -5,6 +5,10 @@
       - ca-certificates
       - curl
       - software-properties-common
+      - python3
+      - python3-pip
+      - python3-setuptools
+      - virtualenv
     state: present
     update_cache: true
 
@@ -33,6 +37,7 @@
 - name: Install Docker Module for Python
   ansible.builtin.pip:
     name: docker
+    virtualenv: /docker/venv
 
 - name: Create portainer volumes
   community.docker.docker_volume:
