use latest, yolo

--- a/ansible/roles/semaphore/tasks/main.yml
+++ b/ansible/roles/semaphore/tasks/main.yml
@@ -1,7 +1,7 @@
 - name: Install Semaphore
   community.docker.docker_container:
     name: semaphore
-    image: semaphoreui/semaphore:v2.11.3
+    image: semaphoreui/semaphore:latest
     state: started
     restart_policy: always
     ports:
