--- a/ansible/run_debian_template.yml
+++ b/ansible/run_debian_template.yml
@@ -1,11 +1,11 @@
 ---
 - name: Setup debian with standard configuration.
   hosts: all
-  vars_prompt:
-    - name: ansible_become_pass
-      prompt: "Enter become pass"
+#  vars_prompt:
+#    - name: ansible_become_pass
+#      prompt: "Enter become pass"
   roles:
     - role: debian_template
     - role: server_setup
       when: ansible_connection == "ssh"
-      become: true
+#      become: true
