--- a/ansible/run_debian_template.yml
+++ b/ansible/run_debian_template.yml
@@ -1,6 +1,6 @@
 ---
 - name: Setup debian with standard configuration.
-  hosts: "{{target_hosts}}"
+  hosts: all
 
   roles:
     - role: debian_template
